--- a/src/shared/styles/styles.css
+++ b/src/shared/styles/styles.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+.tabs {
+  scrollbar-width: none;
+}
+.tabs::-webkit-scrollbar {
+  display: none;
+}
+
 .deepshadow {
   color: #fff;
   text-shadow:
@@ -17,6 +24,26 @@
     0 5px 10px rgba(0, 0, 0, 0.25),
     0 10px 10px rgba(0, 0, 0, 0.2),
     0 20px 20px rgba(0, 0, 0, 0.15);
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: white;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #704a70;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #ff0000;
 }
 
 .snackbar {
